# wai-play

./: .gitignore  Dockerfile  README.md  docker-compose.yml  stack.yaml  wai-play.cabal
src/: Api.hs  Main.hs  Routes.hs  Types.hs
