name:                wai-play
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wai-play#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wai-play
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules:       Routes
                     , Api
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , wai-extra
                     , http-types
                     , mtl
                     , text
                     , bytestring
                     , aeson
                     , hedis
                     , http-conduit
                     , async
                     , uuid
                     , friday
                     , friday-juicypixels
                     , JuicyPixels
                     , transformers
                     , errors
